--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Gilda+Display&display=swap');
 @import "normalize.css";
 @import "./mixins.pcss";
 @import "./layout/base.pcss";
