--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font-family: 'Arial', Helvetica, sans-serif;
+  font-family: 'Montserrat', 'Gilda Display', Helvetica, sans-serif;
   line-height: 1.34;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -21,18 +21,14 @@ body {
   position: relative;
 }
 
+// .maincontent {
+
+// }
+
 .container {
   margin: 0 auto;
-  max-width: 984px;
-  width: 95%;
-
-  @include tablets {
-    width: 92%;
-  }
-
-  @include phones {
-    width: 90%;
-  }
+  max-width: 1488px;
+  width: 77.5%;
 }
 
 * {
